fix jumping editor

--- a/components/ui/molecules/quill-editor/quill.css
+++ b/components/ui/molecules/quill-editor/quill.css
@@ -22,7 +22,7 @@
   left: -100000px;
   height: 1px;
   overflow-y: hidden;
-  position: absolute;
+  position: fixed !important;
   top: 50%;
 }
 .ql-clipboard p {
